trading button removed on mobile + PortfolioScreen.tsx width fixed

--- a/src/components/cards/HighlightsCard/HighlightsCard.module.pcss
+++ b/src/components/cards/HighlightsCard/HighlightsCard.module.pcss
@@ -3,16 +3,24 @@
 }
 
 .bottomGridContainer {
-    column-gap:            50px;
-    display:               grid;
+    column-gap: 50px;
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    justify-content:       space-between;
-    row-gap:               10px;
+    justify-content: space-between;
+    row-gap: 10px;
 }
+
 
 .separator {
     background-color: var(--color-grey-dark);
-    height:           1px;
-    margin:           16px 0;
-    width:            100%;
+    height: 1px;
+    margin: 16px 0;
+    width: 100%;
+}
+
+
+@media (max-width: 768px) {
+    .highlightsContainer {
+        width: 100%;
+    }
 }
